--- a/templates/visite/_form.html.twig
+++ b/templates/visite/_form.html.twig
@@ -2,6 +2,6 @@
 <form class="form-container" method="POST">
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
+    <button class="btn-principal">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
 </form>
