--- a/templates/visite/new.html.twig
+++ b/templates/visite/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('visite/_form.html.twig') }}
 
-    <button><a href="{{ path('app_visite_index') }}">Retour à la liste</a></button>
+    <button class="btn-principal"><a href="{{ path('app_visite_index') }}">Retour à la liste</a></button>
 {% endblock %}
