--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,21 +6,40 @@
 			{% block title %}SCI LA THÉRÈSIÈRE
 			{% endblock %}
 		</title>
-		{% block stylesheets %} <link rel="stylesheet" href="{{ asset('css/style.css') }}">{% endblock %}
-
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Ovo&family=Playball&family=Roboto&display=swap" rel="stylesheet">
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+		{% endblock %}
 		{% block javascripts %}
 			{% block importmap %}
-				{{ importmap('app') }}
+				<script src="{{ asset('script/modal.js') }}" defer></script>
 			{% endblock %}
 		{% endblock %}
 	</head>
 	<body>
+		{% block header %}
+			{{ include('layout/header.html.twig')}}
+		{% endblock %}
 
-		{{ include('layout/header.html.twig')}}
+		{% block flash %}
+			<div class="flash-messages-container">
+				{% for label, messages in app.flashes %}
+					{% for message in messages %}
+						<div class="flash-message flash-{{ label }}">
+							{{ message }}
+						</div>
+					{% endfor %}
+				{% endfor %}
+			</div>
+		{% endblock %}
+
 		<main>
 			{% block body %}{% endblock %}
 		</main>
-
-		{{  include('layout/footer.html.twig') }}
+		{% block footer %}
+			{{  include('layout/footer.html.twig') }}
+		{% endblock %}
 	</body>
-</html>
+</html></body></html>
