--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -21,33 +21,56 @@
 	{% else %}
 		<h2>Créer un nouveau profil</h2>
 	{% endif %}
-	{{ form_row(registrationForm.nom) }}
-	{{ form_row(registrationForm.prenom) }}
-	{{ form_row(registrationForm.pseudo) }}
-	{{ form_row(registrationForm.email) }}
-	{# {% if button_label is not defined or button_label != 'Modifier' %} #}
-		{{ form_row(registrationForm.plainPassword, {
-            label: 'Mot  de passe'
-        }) }}
-		{% if registrationForm.agreeTerms is not defined %}
-			{{ form_row(registrationForm.agreeTerms) }}
-		{% endif %}
-	{# {% endif %} #}
+	<div class="form-group">
+        {{ form_label(registrationForm.nom) }}
+        {{ form_widget(registrationForm.nom) }}
+        {{ form_errors(registrationForm.nom) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(registrationForm.prenom) }}
+        {{ form_widget(registrationForm.prenom) }}
+        {{ form_errors(registrationForm.prenom) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(registrationForm.pseudo) }}
+        {{ form_widget(registrationForm.pseudo) }}
+        {{ form_errors(registrationForm.pseudo) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(registrationForm.email) }}
+        {{ form_widget(registrationForm.email) }}
+        {{ form_errors(registrationForm.email) }}
+    </div>
+
+    {# Pour le mot de passe #}
+    <div class="form-group">
+        {{ form_label(registrationForm.plainPassword, 'Mot de passe') }}
+        {{ form_widget(registrationForm.plainPassword) }}
+        {{ form_errors(registrationForm.plainPassword) }}
+    </div>
+
+    {% if registrationForm.agreeTerms is defined %}
+        <div class="form-group">
+            {{ form_row(registrationForm.agreeTerms) }}
+    {% endif %}
 
 	{% if is_granted('ROLE_USER') %}
 		<div>
-			<a href="{{ path('app_user_show') }}">
+			<a class="btn-principal" href="{{ path('app_user_show') }}">
 				Retour au profil
 			</a>
 
 			<form method="post" action="{{ path('app_user_desactive', {'id': app.user.id}) }}">
 				<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ app.user.id) }}">
-				<button data-delete-user-id="{{ app.user.id }}">Supprimer mon compte
+				<button class="btn-principal" data-delete-user-id="{{ app.user.id }}">Supprimer mon compte
 				</button>
 			</form>
-			<button type="submit" class="btn">Modifier</button>
+			<button class="btn-principal"type="submit" class="btn">Modifier</button>
 		{% else %}
-			<button type="submit" class="btn">Enregistrez vous</button>
+			<button class="btn-principal" type="submit" class="btn">Enregistrez vous</button>
 		</div>
 	{% endif %}
 	{{ form_end(registrationForm) }}
