--- a/templates/reservation/show.html.twig
+++ b/templates/reservation/show.html.twig
@@ -8,10 +8,6 @@
 
 	<table class="table">
 		<tbody>
-			{# <tr>
-						                <th>Id</th>
-						                <td>{{ reservation.id }}</td>
-						            </tr> #}
 			<tr>
 				<th>Pseudo</th>
 				<td>{{ reservation.user.pseudo }}</td>
@@ -29,14 +25,15 @@
 				</th>
 				<td>{{ reservation.dossierResa }}</td>
 			</tr>
-			<tr>
 
 			<tr>
 				<th>Statut de la réservation</th>
 				<td>{{ reservation.statut }}</td>
 			</tr>
+			<tr>
 				<th>Acompte</th>
 				<td>{{ reservation.acompte ? 'Oui' : 'Non' }}</td>
+
 			</tr>
 			<tr>
 				<th>Caution</th>
@@ -58,21 +55,19 @@
 			</tr>
 		</tbody>
 	</table>
-	
 	{% if reservation.statut != 'annulée' and is_granted('ROLE_USER') and app.user == reservation.user %}
 		<form method="post" action="{{ path('app_reservation_cancel', {'id': reservation.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler cette réservation ?');">
 			<input type="hidden" name="_token" value="{{ csrf_token('cancel' ~ reservation.id) }}">
-			<button class="btn">Annuler ma réservation</button>
+			<button class="btn-principal">Annuler ma réservation</button>
 		</form>
 	{% endif %}
-	
-
-	<a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
-
-	<a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">Modifier</a>
-
+	<button class="btn-principal">
+		<a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">Modifier</a>
+	</button>
 	{% if is_granted('ROLE_ADMIN') %}
-	{{ include('reservation/_delete_form.html.twig') }}
+		{{ include('reservation/_delete_form.html.twig') }}
 	{% endif %}
-
+	<button class="btn-principal">
+		<a href="{{ path('app_reservation_index') }}">Retour à la liste</a>
+	</button>
 {% endblock %}
