--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,38 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connectez vous!{% endblock %}
+{% block title %}Connectez vous!
+{% endblock %}
 
 {% block body %}
-    <form class="form-container" method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+	<form class="form-container" method="post">
 
-        {% if app.user %}
-            <div>
-                Vous êtes connecté(e) en tant que  {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
-            </div>
-        {% endif %}
+		{% if error %}
+			<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+		{% endif %}
 
-        {# <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> #}
-        <label for="username">Votre email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Votre mot de passe</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-        <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+		{% if app.user %}
+			<div>
+				Vous êtes connecté(e) en tant que
+				{{ app.user.userIdentifier }},
+				<div class="btn-principal">
+					<a href="{{ path('app_logout') }}">Déconnexion</a>
+				</div>
+			</div>
+		{% endif %}
 
-        
-            {# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html #}
 
-            <div>
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Se rappeler de moi</label>
-            </div>
-       
+		<label for="username">Votre email</label>
+		<input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" autofocus>
+		<label for="password">Votre mot de passe</label>
+		<input type="password" name="_password" id="password" class="form-control" autocomplete="current-password">
+		<input
+		type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Se connecter
-        </button>
-    </form>
+
+		{# Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+				            See https://symfony.com/doc/current/security/remember_me.html #}
+
+		<div>
+			<input type="checkbox" name="_remember_me" id="_remember_me">
+			<label for="_remember_me">Se rappeler de moi</label>
+		</div>
+
+
+		<button class="btn-principal" type="submit">
+			Se connecter
+		</button>
+	</form>
 {% endblock %}
