--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,7 +31,7 @@
 		</div>
 		<section class="google-reviews">
 			<h2>Ce que nos clients disent</h2>
-			
+			<p>section en cours de construction</p>
 			{# <div id="elfsight-widget-xyz"></div> #}
 			
 		</section>
